Alinhamento titulo e icones

--- a/JeffSite/Views/Shared/_FooterPartial.cshtml
+++ b/JeffSite/Views/Shared/_FooterPartial.cshtml
@@ -1,16 +1,24 @@
 @model SocialMidia
 <style>
 .footer-title{
-    display: inline-block;
-    margin-left: 50%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
 }
 .title-footer{
     font-weight: bold;
     color: #CFDBD5;
     font-size: large;
 }
+.footer-socias-midias{
+    text-align: center;
+    color: #CFDBD5;
+}
 </style>
 
 <div class="footer-title">
-    <h1 class="title-footer">Teste</h1>
+    <h1 class="title-footer">Redes Sociais</h1>
+</div>
+<div class="footer-socias-midias">
+    teste
 </div>
