Dropdown com icones e ajuste na tabela

--- a/JeffSite/Views/Shared/_FooterPartial.cshtml
+++ b/JeffSite/Views/Shared/_FooterPartial.cshtml
@@ -13,6 +13,12 @@
 .footer-socias-midias{
     text-align: center;
     color: #CFDBD5;
+    margin-left: -5%;
+}
+.footer-socias-midias ul li{
+    display: inline;
+    text-decoration: none;
+    font-size: 20px;
 }
 </style>
 
@@ -20,5 +26,9 @@
     <h1 class="title-footer">Redes Sociais</h1>
 </div>
 <div class="footer-socias-midias">
-    teste
+    <ul>
+        <li><i class="fab fa-tiktok"></i></li>
+        <li>teste2</li>
+        <li>teste3</li>
+    </ul>
 </div>
