--- a/JeffSite/Views/Carousel/Create.cshtml
+++ b/JeffSite/Views/Carousel/Create.cshtml
@@ -6,7 +6,7 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
         <input type="text" class="form-control" asp-for="Title">
@@ -23,15 +23,15 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ExpirationDate)</label>
         <input type="date" class="form-control" asp-for="ExpirationDate">
-        <span asp-validation-for="ExpirationDate" class="text-danger"></span>
+        <small>Se nao estiver preenchido, ficara para sempre na tela</small>
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Image)</label>
-        <input type="file" accept="image/*" class="form-control" asp-for="Image">
-        @* @if(!string.IsNullOrEmpty(ViewBag.FileNameProfileErro)){
-            <span class="text-danger">@ViewBag.FileNameProfileErro</span>
-        } *@
+        <input type="file" accept="image/*" class="form-control" id="img" name="img">
+        <input type="hidden" asp-for="Image">
+        <span asp-validation-for="Image" class="text-danger"></span>
     </div>
+    <input type="hidden" asp-for="PathImage" value="../JeffSite/wwwroot/img/Carousel/">
     <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
     <button class="btn btn-primary">Salvar</button>
 </form>
@@ -39,3 +39,12 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<script>
+    document.getElementById('img').addEventListener('change', changeImg);
+    function changeImg(){
+        var img = document.getElementById('img').value
+        var image = document.getElementById('Image')
+        image.value = img
+    }
+</script>
