--- a/JeffSite/Views/Carousel/Index.cshtml
+++ b/JeffSite/Views/Carousel/Index.cshtml
@@ -16,10 +16,7 @@
       <th scope="col">#</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Id)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Title)</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.Description)</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.Link)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.ExpirationDate)</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.Image)</th>
     </tr>
   </thead>
   <tbody>
@@ -32,12 +29,8 @@
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </th>
             <td>@Html.DisplayFor(modelItem => item.Id)</td>
-            <th scope="col">@Html.DisplayFor(Model => item.Id)</th>
-            <th scope="col">@Html.DisplayFor(Model => item.Title)</th>
-            <th scope="col">@Html.DisplayFor(Model => item.Description)</th>
-            <th scope="col">@Html.DisplayFor(Model => item.Link)</th>
-            <th scope="col">@Html.DisplayFor(Model => item.ExpirationDate)</th>
-            <th scope="col">@Html.DisplayFor(Model => item.Image)</th>
+            <td>@Html.DisplayFor(Model => item.Title)</td>
+            <td>@Html.DisplayFor(Model => item.ExpirationDate)</td>
         </tr>
       }
   </tbody>
