--- a/JeffSite/Views/Carousel/Delete.cshtml
+++ b/JeffSite/Views/Carousel/Delete.cshtml
@@ -27,6 +27,6 @@
         <label>@Html.DisplayNameFor(Model => Model.ExpirationDate)</label>
         <input type="date" class="form-control" asp-for="ExpirationDate" readonly>
     </div>
-    <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
+    <a asp-controller="Carousel" asp-action="Index">Voltar</a>
     <button class="btn btn-danger">Excluir</button>
 </form>
