--- a/JeffSite/Views/Carousel/Edit.cshtml
+++ b/JeffSite/Views/Carousel/Edit.cshtml
@@ -6,7 +6,11 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Create" enctype="multipart/form-data">
+<form asp-action="Edit" enctype="multipart/form-data">
+<div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.Id)</label>
+        <input type="text" class="form-control" asp-for="Id" readonly>
+    </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
         <input type="text" class="form-control" asp-for="Title">
@@ -29,6 +33,7 @@
         <label>@Html.DisplayNameFor(Model => Model.Image)</label>
         <input type="file" accept="image/*" class="form-control" id="img" name="img">
         <input type="hidden" asp-for="Image">
+        <small>Nao se preocupe a imagem esta gravada, so altere se precisar!</small>
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <input type="hidden" asp-for="PathImage" value="../JeffSite/wwwroot/img/Carousel/">
