Ajuste finais para filtrar itens

--- a/JeffSite/Views/Carousel/Create.cshtml
+++ b/JeffSite/Views/Carousel/Create.cshtml
@@ -29,6 +29,7 @@
         <label>@Html.DisplayNameFor(Model => Model.Image)</label>
         <input type="file" accept="image/*" class="form-control" id="img" name="img">
         <input type="hidden" asp-for="Image">
+        <small>Por favor, incluir imagens coom no maximo 400px de largura e 200px de altura</small>
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <input type="hidden" asp-for="PathImage" value="../JeffSite/wwwroot/img/Carousel/">
