--- a/JeffSite/Views/Carousel/Edit.cshtml
+++ b/JeffSite/Views/Carousel/Edit.cshtml
@@ -34,6 +34,8 @@
         <input type="file" accept="image/*" class="form-control" id="img" name="img">
         <input type="hidden" asp-for="Image">
         <small>Nao se preocupe a imagem esta gravada, so altere se precisar!</small>
+        <br>
+        <small>Por favor, incluir imagens coom no maximo 400px de largura e 200px de altura</small>
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <input type="hidden" asp-for="PathImage" value="../JeffSite/wwwroot/img/Carousel/">
