--- a/JeffSite/Views/Home/Index.cshtml
+++ b/JeffSite/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             @foreach(var item in (List<Carousel>)ViewBag.Carousels){
                 @if(cont++ != ViewBag.CarouselsQuantity){
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="@string.Concat($"../img/Carousel/{item.Image}")">
+                        <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat($"../img/Carousel/{item.Image}")">
                         <div class="carousel-caption d-none d-md-block">
                             <h5><a href="@item.Link" target="_blank">@item.Title</a></h5>
                             <p>@item.Description</p>
@@ -35,7 +35,7 @@
                     </div>
                 }else{
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="@string.Concat($"../img/Carousel/{item.Image}")">
+                        <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat($"../img/Carousel/{item.Image}")">
                         <div class="carousel-caption d-none d-md-block">
                             <h5><a href="@item.Link" target="_blank">@item.Title</a></h5>
                             <p>@item.Description</p>
