Esqueleto das fotos do leitor

--- a/JeffSite/Views/Shared/_Layout.cshtml
+++ b/JeffSite/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link" style="padding-left: 3.5em;" asp-controller="Loja" asp-action="Index">LOJA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="padding-left: 3.5em;" asp-controller="Loja" asp-action="Index">CANTINHO DO LEITOR</a>
+                            <a class="nav-link" style="padding-left: 3.5em;" asp-controller="Leitor" asp-action="Index">CANTINHO DO LEITOR</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" style="padding-left: 3.5em;" asp-controller="Home" asp-action="Contato">CONTATO</a>
