--- a/JeffSite/Views/Leitor/Index.cshtml
+++ b/JeffSite/Views/Leitor/Index.cshtml
@@ -1,5 +1,69 @@
 ﻿@page
 @{
 }
-
-Cantinho do leitor
+<style>
+    .imgContainerMain{
+        text-align: center;
+    }
+    .imgContainer{
+        float:left;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .imgContainer img{
+        height: 170px;
+        width: 170px;
+    }
+</style>
+<div class="container">
+  <h1>Hello World!</h1>
+  <div class="row">
+    <div class="col-sm-8" style="background-color:yellow;">
+        <div class="imgContainerMain">
+            <div class="imgContainer">
+                <img src="/images/tv.gif">
+                <p>This is image 1</p>
+            </div>
+            <div class="imgContainer">
+                <img class="middle-img" src="/images/tv.gif">
+                <p>This is image 2</p>
+            </div>
+            <div class="imgContainer">
+                <img src="/images/tv.gif">
+                <p>This is image 3</p>
+            </div>
+        </div>
+        <div class="imgContainerMain">
+            <div class="imgContainer">
+                <img src="/images/tv.gif">
+                <p>This is image 4</p>
+            </div>
+            <div class="imgContainer">
+                <img class="middle-img" src="/images/tv.gif">
+                <p>This is image 5</p>
+            </div>
+            <div class="imgContainer">
+                <img src="/images/tv.gif">
+                <p>This is image 6</p>
+            </div>
+        </div>
+        <div class="imgContainerMain">
+            <div class="imgContainer">
+                <img src="/images/tv.gif">
+                <p>This is image 7</p>
+            </div>
+            <div class="imgContainer">
+                <img class="middle-img" src="/images/tv.gif">
+                <p>This is image 8</p>
+            </div>
+            <div class="imgContainer">
+                <img src="/images/tv.gif">
+                <p>This is image 9</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4" style="background-color:pink;">
+      <p>Sed ut perspiciatis...</p>
+    </div>
+  </div>
+</div>
