--- a/JeffSite/Views/Leitor/Index.cshtml
+++ b/JeffSite/Views/Leitor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@model JeffSite.Models.Leitor
 @{
 }
 <style>
@@ -18,7 +18,7 @@
 <div class="container">
   <h1>Hello World!</h1>
   <div class="row">
-    <div class="col-sm-8" style="background-color:yellow;">
+    <div class="col-sm-8">
         <div class="imgContainerMain">
             <div class="imgContainer">
                 <img src="/images/tv.gif">
@@ -62,8 +62,50 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-4" style="background-color:pink;">
-      <p>Sed ut perspiciatis...</p>
+    <div class="col-sm-4">
+        <h4 style="text-align: center;">Envie sua imagem</h4>
+        <form asp-controller="Leitor" asp-action="Create" enctype="multipart/form-data" style="border: 1px solid black; border-radius: 5%; padding: 5px;">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">
+                        @Html.DisplayNameFor(model => model.Name)
+                    </span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" asp-for="Name">
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">
+                        @Html.DisplayNameFor(model => model.Email)
+                    </span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" asp-for="Email">
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">
+                        @Html.DisplayNameFor(model => model.Nickname)
+                    </span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" asp-for="Nickname">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupFileAddon01">
+                        @Html.DisplayNameFor(model => model.Img)
+                    </span>
+                </div>
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" asp-for="Img" aria-describedby="inputGroupFileAddon01" accept="image/*" >
+                    <label class="custom-file-label" for="inputGroupFile01">Escolha sua imagem</label>
+                    <small>Somente 3Mb</small>
+                    <span asp-validation-for="Img" class="text-danger"></span>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-info">Enviar</button>
+        </form>
     </div>
   </div>
 </div>
