--- a/JeffSite/Views/Leitor/Index.cshtml
+++ b/JeffSite/Views/Leitor/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model JeffSite.Models.Leitor
 @{
+    string errorMessage = ViewBag.ErrorMessage == null ? string.Empty : ViewBag.ErrorMessage.ToString();
 }
 <style>
     .imgContainerMain{
@@ -92,18 +93,19 @@
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" asp-for="Nickname">
             </div>
             <div class="input-group mb-3">
+                <input type="hidden" asp-for="PathImg" value="JeffSite/wwwroot/img/Leitor">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="inputGroupFileAddon01">
-                        @Html.DisplayNameFor(model => model.Img)
+                        @Html.DisplayNameFor(model => model.PathImg)
                     </span>
                 </div>
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" asp-for="Img" aria-describedby="inputGroupFileAddon01" accept="image/*" >
+                    <input type="file" class="custom-file-input" name="Img" aria-describedby="inputGroupFileAddon01" accept="image/*" >
                     <label class="custom-file-label" for="inputGroupFile01">Escolha sua imagem</label>
-                    <small>Somente 3Mb</small>
                 </div>
             </div>
-            <span asp-validation-for="Img" class="text-danger"></span>
+            <small>Somente 5Mb</small>
+            <span class="text-danger">@errorMessage</span>
             <button type="submit" class="btn btn-info">Enviar</button>
         </form>
     </div>
