Gravando no banco e armazendo a imagem

--- a/JeffSite/Views/Leitor/Index.cshtml
+++ b/JeffSite/Views/Leitor/Index.cshtml
@@ -93,7 +93,7 @@
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" asp-for="Nickname">
             </div>
             <div class="input-group mb-3">
-                <input type="hidden" asp-for="PathImg" value="JeffSite/wwwroot/img/Leitor">
+                <input type="hidden" asp-for="PathImg" value="../JeffSite/wwwroot/img/Leitor/">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="inputGroupFileAddon01">
                         @Html.DisplayNameFor(model => model.PathImg)
