--- a/JeffSite/Views/Leitor/Index.cshtml
+++ b/JeffSite/Views/Leitor/Index.cshtml
@@ -20,48 +20,20 @@
   <h1>Hello World!</h1>
   <div class="row">
     <div class="col-sm-8">
-        <div class="imgContainerMain">
-            <div class="imgContainer">
-                <img src="/images/tv.gif">
-                <p>This is image 1</p>
+        @{
+            List<Leitor> listLeitores = (List<Leitor>)ViewBag.Leitores;
+            int totalRegister = listLeitores.Count;
+        }
+        @for (var i = 0; i < totalRegister; i++)
+        {
+            <div class="imgContainerMain">
+                <div class="imgContainer">
+                        <img src="../img/Leitor/@listLeitores[i].NameImg">
+                        <p>This is image @i</p>
+                    </div>
             </div>
-            <div class="imgContainer">
-                <img class="middle-img" src="/images/tv.gif">
-                <p>This is image 2</p>
-            </div>
-            <div class="imgContainer">
-                <img src="/images/tv.gif">
-                <p>This is image 3</p>
-            </div>
-        </div>
-        <div class="imgContainerMain">
-            <div class="imgContainer">
-                <img src="/images/tv.gif">
-                <p>This is image 4</p>
-            </div>
-            <div class="imgContainer">
-                <img class="middle-img" src="/images/tv.gif">
-                <p>This is image 5</p>
-            </div>
-            <div class="imgContainer">
-                <img src="/images/tv.gif">
-                <p>This is image 6</p>
-            </div>
-        </div>
-        <div class="imgContainerMain">
-            <div class="imgContainer">
-                <img src="/images/tv.gif">
-                <p>This is image 7</p>
-            </div>
-            <div class="imgContainer">
-                <img class="middle-img" src="/images/tv.gif">
-                <p>This is image 8</p>
-            </div>
-            <div class="imgContainer">
-                <img src="/images/tv.gif">
-                <p>This is image 9</p>
-            </div>
-        </div>
+        }
+       
     </div>
     <div class="col-sm-4">
         <h4 style="text-align: center;">Envie sua imagem</h4>
