--- a/JeffSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/JeffSite/Views/Shared/_LayoutAdmin.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Carousel" asp-action="Index">Carrousel</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Leitor" asp-action="ApprovePost">Posts</a>
+                        </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
                         <div>
