inserido estilo para links

--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -34,9 +34,17 @@
         font-style: italic;
     }
     .descricao-links{
-        background-color: pink;
+        background-color: green;
         text-align: right;
         margin-right: 10px;
+    }
+    .descricao-links ul li{
+    display: inline;
+    text-decoration: none;
+    color: #CFDBD5;
+    }
+    .descricao-links a{
+        color: #CFDBD5;
     }
 </style>
 <div class="container">
@@ -55,8 +63,10 @@
                         </p>
                     </div>
                     <div class="descricao-links">
-                        <a>teste</a>
-                        <a>teste</a>
+                        <ul>
+                            <li><a href="#">teste 1</a></li>
+                            <li><a href="#">teste 2</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
