--- a/JeffSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/JeffSite/Views/Shared/_LayoutAdmin.cshtml
@@ -34,6 +34,15 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Leitor" asp-action="ApprovePost">Posts</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Loja
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-controller="Loja" asp-action="ListLivros">Livros</a>
+                                <a class="dropdown-item" href="#">Pedidos</a>
+                            </div>
+                        </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
                         <div>
