--- a/JeffSite/Views/Loja/Create.cshtml
+++ b/JeffSite/Views/Loja/Create.cshtml
@@ -22,9 +22,11 @@
             <label id="label-icon">Icone</label>
         </button>
         <div class="dropdown-menu">
-            <a class="dropdown-item" onclick="changeIcon('Amazon','fab fa-amazon')" href="#"><i class="fab fa-amazon"></i></i> Facebook</a>
+            <a class="dropdown-item" onclick="changeIcon('Amazon','fab fa-amazon')" href="#"><i class="fab fa-amazon"></i></i> Amazon</a>
         </div>
     </div>
+    <input type="text" class="form-control" placeholder="Link para compra">
+    <input type="hidden" class="form-control">
     
     <input type="hidden" asp-for="ImgName" value="../JeffSite/wwwroot/img/Livro/">
     <a asp-controller="Carousel" asp-action="Index">Voltar</a>
