--- a/JeffSite/Views/Loja/Create.cshtml
+++ b/JeffSite/Views/Loja/Create.cshtml
@@ -6,7 +6,7 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Create" enctype="multipart/form-data">
+<form asp-action="Create" enctype="multipart/form-data" method="POST">
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
         <input type="text" class="form-control" asp-for="Title">
@@ -17,21 +17,26 @@
         <input type="text" class="form-control" asp-for="Description">
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
-    <div class="input-group-prepend">
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.ImgName)</label>
+        <input type="file" accept="image/*" class="form-control" name="Img" >
+        <input type="hidden" class="form-control" asp-for="ImgName">
+        <span asp-validation-for="ImgName" class="text-danger"></span>
+    </div>
+    @* <div class="input-group-prepend">
         <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="btnIcon">
             <label id="label-icon">Icone</label>
         </button>
         <div class="dropdown-menu">
             <a class="dropdown-item" onclick="changeIcon('Amazon','fab fa-amazon')" href="#"><i class="fab fa-amazon"></i></i> Amazon</a>
         </div>
-        <input type="hidden" class="form-control" Id="Name">
+        <input type="hidden" class="form-control" Id="Name" >
         <input type="hidden" class="form-control" Id="IconFA">
         <input type="text" class="form-control" placeholder="Url">
-    </div>
+    </div> *@
     
-    <input type="hidden" asp-for="ImgName" value="../JeffSite/wwwroot/img/Livro/">
     <a asp-controller="Carousel" asp-action="Index">Voltar</a>
-    <button class="btn btn-primary">Salvar</button>
+    <button class="btn btn-primary">Proximo</button>
 </form>
 
 @section Scripts {
