--- a/JeffSite/Views/Loja/Create.cshtml
+++ b/JeffSite/Views/Loja/Create.cshtml
@@ -35,7 +35,7 @@
         <input type="text" class="form-control" placeholder="Url">
     </div> *@
     
-    <a asp-controller="Carousel" asp-action="Index">Voltar</a>
+    <a asp-controller="Loja" asp-action="Index">Voltar</a>
     <button class="btn btn-primary">Proximo</button>
 </form>
 
