--- a/JeffSite/Views/Loja/ListLivros.cshtml
+++ b/JeffSite/Views/Loja/ListLivros.cshtml
@@ -26,9 +26,11 @@
       {
           <tr>
             <th scope="row">
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id })
                     @Html.Label(" | ")
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Deletar", "Delete", new { id = item.Id })
+                    @Html.Label(" | ")
+                    @Html.ActionLink("Links", "CreateWhereToBuy", new { id = item.Id })
             </th>
             <td>@Html.DisplayFor(modelItem => item.Id)</td>
             <td>@Html.DisplayFor(modelItem => item.Title)</td>
