--- a/JeffSite/Views/Loja/CreateWhereToBuy.cshtml
+++ b/JeffSite/Views/Loja/CreateWhereToBuy.cshtml
@@ -31,7 +31,7 @@
     <button class="btn btn-primary" onclick="AddWhereToBuy()" style="margin-bottom: 20px;
     margin-top: 10px;">Adicionar</button>
 
-<table class="table table-striped">
+<table class="table table-striped" id="tab" >
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -49,7 +49,7 @@
                 @Html.ActionLink("Deletar", "Delete", new { id = item.Id })
             </td>
             <td style="width: 125px;">@item.Name</td>
-            <td><a href="@item.Url" target="_blank" style="font-size: smaller; text-decoration: none;">@item.Url</a></td>
+            <td><a href="@item.UrlEndereco" target="_blank" style="font-size: smaller; text-decoration: none;">@item.UrlEndereco</a></td>
           </tr>
       }
   </tr>
@@ -92,7 +92,7 @@
                 },
                 Name: document.getElementById('name').value,
                 IconFa: document.getElementById('iconFA').value,
-                Url: document.getElementById('url').value
+                UrlEndereco: document.getElementById('url').value
             }
             //enviando dados para API
             var endpoint = 'https://' + window.location.host + '/api/livro/addwheretobuy'
@@ -102,18 +102,24 @@
                 type: 'POST',
                 dataType: 'json',
                 data: item,
-                success: function (data, status) {
-                    console.log('the request is ' + status + ' the data is ' + data);
-                },
-                error: function (html, status, error) {
-                    console.log('the request is:' + status + ' \nError: ' + error);
-                    alert("Ocorreu algum erro ao tentar inserir, tente mais tarde ou contato o ADM!")
+                success: AddLinha(item),
+                error: function (error) {
+                    console.log(error);
                 }
             })
-            
         }
     }
 
+    function AddLinha(obj){
+        var newRow = $("<tr>");
+        var cols = ""
+        cols += '<td style="width: 150px;><a><a href="/Loja/Edit/NOVOID">Editar</a> | <a href="/Loja/Delete/NOVOID">Deletar</a></td>'                      
+        cols += `<td style="width: 125;">${obj.Name}</td>`
+        cols += `<td><a href="teste submarino" target="_blank" style="font-size: smaller; text-decoration: none;">${obj.UrlEndereco}</a></td>`
+
+        newRow.append(cols)
+        $("#tab").append(newRow)
+    }
     
 
 </script>
